# vcs-toolkit-rs

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  cliff.toml  deny.toml
.claude/: settings.json
.claude/hooks/: jj-prompt-reminder.sh  jj-prompt-reminder.txt
.github/workflows/: ci.yml  release.yml
crates/cli-support/: CHANGELOG.md  Cargo.toml  README.md
crates/cli-support/src/: credentials.rs  lib.rs
crates/core/: CHANGELOG.md  Cargo.toml  README.md
crates/core/docs/: cookbook.md  core.md
crates/core/src/: dto.rs  error.rs  git_backend.rs  jj_backend.rs  lib.rs
crates/core/tests/: repo.rs
crates/diff/: CHANGELOG.md  Cargo.toml  README.md
crates/diff/src/: diff.rs  lib.rs  version.rs
crates/forge/: CHANGELOG.md  Cargo.toml  README.md
crates/forge/docs/: forge.md
crates/forge/src/: dto.rs  error.rs  gitea_forge.rs  github_forge.rs  gitlab_forge.rs  lib.rs
crates/git/: CHANGELOG.md  Cargo.toml  README.md
crates/git/docs/: git.md  security.md
crates/git/proptest-regressions/: parse.txt
crates/git/src/: conflict.rs  lib.rs  parse.rs
crates/git/tests/: repo.rs
crates/git/tests/common/: mod.rs
crates/gitea/: CHANGELOG.md  Cargo.toml  README.md
crates/gitea/docs/: gitea.md
crates/gitea/src/: lib.rs  parse.rs
crates/gitea/tests/: cli.rs
crates/github/: CHANGELOG.md  Cargo.toml  README.md
crates/github/docs/: github.md
crates/github/src/: lib.rs  parse.rs
crates/github/tests/: cli.rs
crates/gitlab/: CHANGELOG.md  Cargo.toml  README.md
crates/gitlab/src/: lib.rs  parse.rs
crates/gitlab/tests/: cli.rs
crates/jj/: CHANGELOG.md  Cargo.toml  README.md
crates/jj/docs/: jj.md
crates/jj/src/: conflict.rs  lib.rs  parse.rs
crates/jj/tests/: repo.rs
crates/jj/tests/common/: mod.rs
crates/mcp/: CHANGELOG.md  Cargo.toml  README.md
crates/mcp/docs/: mcp.md
crates/mcp/src/: lib.rs  main.rs
crates/mcp/tests/: mcp.rs
crates/process/: CHANGELOG.md  Cargo.toml
crates/process/src/: error.rs  exec.rs  lib.rs  linux.rs  macros.rs  other.rs  runner.rs  stream.rs  windows.rs
crates/process/tests/: job.rs
crates/process/tests/common/: mod.rs
crates/testkit/: CHANGELOG.md
crates/testkit/src/: lib.rs
crates/watch/: CHANGELOG.md  Cargo.toml  README.md
crates/watch/src/: error.rs  event.rs  lib.rs
crates/watch/tests/: watch.rs
docs/: README.md  cookbook.md  core.md  forge.md  git.md  gitea.md  github.md  gitlab.md  jj.md  mcp.md  positioning.md  process-model.md  security.md  stability.md  testing.md  watch.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: git_conflict.rs  jj_conflict.rs
