[workspace]
resolver = "3"
members = [
    "crates/diff",
    "crates/cli-support",
    "crates/git",
    "crates/jj",
    "crates/github",
    "crates/gitlab",
    "crates/gitea",
    "crates/forge",
    "crates/core",
    "crates/testkit",
    "crates/watch",
    "crates/mcp",
]
# `fuzz/` is a cargo-fuzz crate (nightly + libFuzzer); excluded so it never
# touches the stable build, MSRV, or the CI gate. Run it manually — see
# fuzz/README.md.
exclude = ["fuzz"]

# Metadata shared by every crate in the toolkit. Each crate inherits these via
# `field.workspace = true` in its own Cargo.toml. NOTE: `version` is *not* here
# on purpose — the three crates publish independently and carry their own
# version (see each crate's [package]).
[workspace.package]
edition = "2024"
# Minimum supported Rust: edition 2024 needs 1.85, but the wrappers use
# let-chains (stabilised in 1.88), so 1.88 is the real floor. Declared here (and
# inherited via `rust-version.workspace = true`) so the contract is machine-checked
# — `cargo build` on an older toolchain fails early with a clear message.
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/ZelAnton/vcs-toolkit-rs"
authors = ["Anton Zhelezniakou"]

# ---------------------------------------------------------------------------
# Workspace dependencies
#
# Convention (see AGENTS.md "Dependency management"): this workspace fixes NO
# allow-list of crates. Declare a dependency here once and reference it from a
# member with `<crate>.workspace = true` when more than one crate needs it.
# Give every entry an inline comment explaining *why* it's here. Pin major
# versions, enable only the features used, and keep Cargo.lock committed.
# ---------------------------------------------------------------------------
[workspace.dependencies]
# External job-backed process launcher (Windows Job Object / Linux cgroup v2, so a
# git/jj/gh subprocess tree dies on close), with the `CliClient` core, the
# `cli_client!` macro, structured `Error`, and the `ScriptedRunner`/`RecordingRunner`
# test seams the wrappers build on. Was the internal `vcs-process` crate; now the
# published `processkit`. 0.8 floor: `CliClient` verbs renamed for a single shared
# vocabulary (`text`→`run`, `capture`→`output`, `unit`→`run_unit`, `code`→`exit_code`;
# `ProcessResult::code()` is unchanged); `SupervisionOutcome` is `#[non_exhaustive]`;
# `Error::Exit` Display gained a stderr-tail suffix (variant/fields unchanged); the
# `cancellation` feature adds `CliClient::default_cancel_on` + `Reply::pending()`, and
# the core `output_all` bounded fan-out (used by `vcs-jj`'s `workspace_roots`) ships
# feature-free.
processkit = "0.8"
