[workspace]
resolver = "3"
members = [
    "crates/diff",
    "crates/cli-support",
    "crates/git",
    "crates/jj",
    "crates/github",
    "crates/gitlab",
    "crates/gitea",
    "crates/forge",
    "crates/core",
    "crates/testkit",
    "crates/watch",
    "crates/mcp",
]
# `fuzz/` is a cargo-fuzz crate (nightly + libFuzzer); excluded so it never
# touches the stable build, MSRV, or the CI gate. Run it manually — see
# fuzz/README.md.
exclude = ["fuzz"]

# Metadata shared by every crate in the toolkit. Each crate inherits these via
# `field.workspace = true` in its own Cargo.toml. NOTE: `version` is *not* here
# on purpose — the three crates publish independently and carry their own
# version (see each crate's [package]).
[workspace.package]
edition = "2024"
# Minimum supported Rust: edition 2024 needs 1.85, but the wrappers use
# let-chains (stabilised in 1.88), so 1.88 is the real floor. Declared here (and
# inherited via `rust-version.workspace = true`) so the contract is machine-checked
# — `cargo build` on an older toolchain fails early with a clear message.
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/ZelAnton/vcs-toolkit-rs"
authors = ["Anton Zhelezniakou"]

# ---------------------------------------------------------------------------
# Workspace dependencies
#
# Convention (see AGENTS.md "Dependency management"): this workspace fixes NO
# allow-list of crates. Declare a dependency here once and reference it from a
# member with `<crate>.workspace = true` when more than one crate needs it.
# Give every entry an inline comment explaining *why* it's here. Pin major
# versions, enable only the features used, and keep Cargo.lock committed.
# ---------------------------------------------------------------------------
[workspace.dependencies]
# External job-backed process launcher (Windows Job Object / Linux cgroup v2, so a
# git/jj/gh subprocess tree dies on close), with the `CliClient` core, the
# `cli_client!` macro, structured `Error`, and the `ScriptedRunner`/`RecordingRunner`
# test seams the wrappers build on. Was the internal `vcs-process` crate; now the
# published `processkit`. The 0.8 floor brought the `CliClient` verb rename
# (`text`→`run`, `capture`→`output`, `unit`→`run_unit`, `code`→`exit_code`;
# `ProcessResult::code()` unchanged), the `cancellation` feature
# (`CliClient::default_cancel_on` + `Reply::pending()`), and the feature-free
# `output_all` bounded fan-out (`vcs-jj`'s `workspace_roots`). The 0.9.1 floor adds
# the fix for our HIGH classification bug — **`Error::Exit` now carries the FULL
# `stdout`/`stderr`** (no 4 KiB truncation; the one-line `Display` stays bounded), so
# the error classifiers see the whole stream again — plus additive `ok_codes`,
# `timeout_grace`, `duration()`, `command_line()`, and `Error::is_transient()`. Its one
# breaking item (five option-structs — `RestartPolicy`/`OverflowMode`/
# `OutputBufferPolicy`/`ResourceLimits`/`ProcessGroupOptions` — became
# `#[non_exhaustive]`) does not touch us: none are constructed here.
processkit = "0.9.1"

# ---------------------------------------------------------------------------
# Workspace lints — inherited by every crate via `[lints] workspace = true`.
# ---------------------------------------------------------------------------
[workspace.lints.rust]
# Teach the compiler the `docsrs` cfg: docs.rs (and our nightly doc build) pass
# `--cfg docsrs` via each crate's `rustdoc-args` to switch on the `#[doc(cfg(...))]`
# "Available on crate feature `x`" badges; without this, `cfg(docsrs)` would warn
# as an unexpected cfg under `-D warnings`.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs)'] }
