[package]
name = "vcs-github"
version = "0.1.0"
description = "Automate the GitHub CLI (gh) from Rust through process execution."
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
# Runs `gh` inside an OS job (Windows Job Object / Linux cgroup) so the process
# tree is killed on close — no orphaned subprocesses.
vcs-process.workspace = true
# Deserialize `gh … --json` output into typed structs (PullRequest/Issue/Repo).
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
