[package]
name = "vcs-mcp"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server exposing vcs-core/vcs-forge repository operations as tools."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
# The official MCP Rust SDK: the server runtime, the #[tool] macros, the stdio
# transport an agent harness talks to, and the re-exported `schemars` used to
# derive tool input schemas.
rmcp = { version = "1", features = ["server", "macros", "transport-io"] }
# The git/jj facade (`Repo`) and the forge facade (`Forge`), with their `serde`
# feature on so the DTOs the tools return serialize to JSON.
vcs-core = { path = "../core", version = "0.2", features = ["serde"] }
vcs-forge = { path = "../forge", version = "0.1", features = ["serde"] }
# Async runtime for the server loop + rmcp's async handler dispatch (like
# `vcs-watch`, this is a runtime dependency, not just dev). `io-std` backs the
# stdio transport.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
# Deserialize the tool parameter structs; encode tool results as JSON.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
path = "src/lib.rs"

[[bin]]
name = "vcs-mcp"
path = "src/main.rs"

[dev-dependencies]
# Drive the server with an in-process MCP client for hermetic wiring tests
# (`client` + an in-memory duplex transport for the round-trip).
rmcp = { version = "1", features = ["server", "client", "macros", "transport-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util"] }
# The `ScriptedRunner` test seam to back a `Repo` with canned output (hermetic
# tool tests — no real git needed).
processkit.workspace = true
# Real throwaway git/jj repos for the `#[ignore]` integration tests.
vcs-testkit = { path = "../testkit" }
